# updata

./: LICENSE.md  README.md  hh.csv  hh1.csv  main.py  pyproject.toml
src/: core.py
src/updata/: __init__.py  core.py
tests/: test_cash.py  test_opt.py
